add: icon fa - github, npm, chart-line

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uiwebkit/icn",
-  "version": "0.0.4",
-  "description": "Uni Icons",
+  "version": "0.0.5",
+  "description": "Uni Icons Kit",
   "license": "MIT",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
@@ -10,8 +10,8 @@
   "types": "dist/custom-elements/index.d.ts",
   "collection": "dist/collection/collection-manifest.json",
   "collection:main": "dist/collection/index.js",
-  "unpkg": "dist/icn/icn.js",
-  "jsdelivr": "dist/icn/icn.js",
+  "unpkg": "dist/icn/icn.esm.js",
+  "jsdelivr": "dist/icn/icn.esm.js",
   "files": [
     "dist/",
     "loader/"
@@ -23,7 +23,9 @@
     "serve:prod": "stencil build --watch --serve --no-open",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "pack": "npm pack",
+    "publish": "npm publish --public"
   },
   "devDependencies": {
     "@stencil/core": "2.1.2"
