--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@uiwebkit/icn",
   "version": "0.0.5",
   "description": "Uni Icons Kit",
+  "author": "UiWebKit",
   "license": "MIT",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
@@ -28,7 +29,7 @@
     "publish": "npm publish --public"
   },
   "devDependencies": {
-    "@stencil/core": "2.1.2"
+    "@stencil/core": "2.3.0"
   },
   "repository": {
     "type": "git",
