--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.16",
   "description": "Uni Icons Kit",
   "license": "MIT",
-  "author": "UiWebKit",
+  "author": "Vitalii Havryliuk",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
   "es2015": "dist/esm/index.js",
@@ -26,12 +26,12 @@
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
     "pack": "npm pack",
-    "publish": "npm publish uiwebkit-icn-1.0.0.tgz --public"
+    "publish": "npm publish uiwebkit-icn-0.0.16.tgz --public"
   },
   "dependencies": {
-    "@stencil/core": "2.4.0",
     "@fortawesome/fontawesome-free": "5.15.2",
-    "bootstrap-icons": "1.3.0",
+    "@stencil/core": "2.4.0",
+    "bootstrap-icons": "1.5.0",
     "material-design-icons": "3.0.1"
   },
   "devDependencies": {
@@ -41,5 +41,5 @@
     "type": "git",
     "url": "https://github.com/uiwebkit/icn.git"
   },
-  "homepage": "https://uiwebkit.com/?category=icn"
+  "homepage": "https://uiwebkit.com/icn/1/"
 }
