--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@uiwebkit/icn",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Uni Icons Kit",
   "license": "MIT",
-  "author": "Vitalii Havryliuk",
+  "author": "Vitali Havryliuk",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
   "es2015": "dist/esm/index.js",
@@ -26,7 +26,7 @@
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
     "pack": "npm pack",
-    "publish": "npm publish uiwebkit-icn-1.0.0.tgz --access public"
+    "publish": "npm publish uiwebkit-icn-1.0.1.tgz --access public"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.2",
